improved config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,7 @@ datadir: 'data/'
 dbraw: 'data/rawtweets.sqlite'
 dbclean: 'data/tweets.sqlite'
 filter: ['Groningen']
-api_key: 'kWAVt64eBo8nmn3tkFsvJaJi3'
-api_secret_key: 'MxL5AU6n9QQ2cI8ZgaCeQQcVmmkF0e73am2jPj8TwXB8JUXdT5'
-token: '1106257453472272386-C0u9WkSdNekHV8GsiowsT2b7xFkVe4'
-secret_token: 'hPvzr47FvhfIehqicMmjkIMFcqPXt2RwjAcY8VG7h4jMZ'
+api_key: ''
+api_secret_key: ''
+token: ''
+secret_token: ''
